<resources>
    <string name="app_name">Medicine Reminder</string>

    <string name="logo_name">Medicine Reminder</string>
    <string name="search_text">Search...</string>
    <string name="alarms">Alarmas activas</string>

    <string name="pistaNombre">Nombre de medicina</string>
    <string name="pistaHoras">Primera toma del dia</string>
    <string name="pistaMinutos">Duracion de efecto</string>
    <string name="pistaDuracion">Duracion (dias)</string>
    <string name="pistaNotas">Notas</string>
    <string name="botonesGuardar">guardar</string>
    <string name="botonEditar">Editar</string>
    <string name="editarAlarma">Editar alarma</string>
    <string name="eliminarAlarma">Eliminar</string>
    <string name="InicioAlarma">Inicio de alarma</string>

    <string name="borrar">Borrar</string>
    <string name="asistente">Asistente</string>
    <string name="editar">Editar</string>
    <string name="mostrarAlarmas">Alarmas</string>

    <string name="Buscar_hint"><font size="14">Buscar...</font></string>


</resources>
